# little-snitch-rule-manager

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ls_manage.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: lint.yml
.specify/memory/: constitution.md
tests/: test_ls_manage.py
